--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+    font-family: 'Gotham', sans-serif;
+    font-size: 62.5%
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    margin: 0;
+    background-color: #E5E5E5;
 }
+
+@media (prefers-color-scheme: dark){
+    body{
+        background-color: #04243C;
+        color: white;
+    }
+}
+
+.container{
+    max-width: 1440px;
+    width: 100%;
+    min-width: 320px;
+    margin: 0 auto;
+    position: relative;
+}
+
+
